--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -9,7 +9,7 @@
     "def foo():\n",
     "    print('foo')\n",
     "def bar():\n",
-    "    print('bar')\n"
+    "    print('bar')\n",
     "def foobar():\n",
     "    foo()\n",
     "    bar()\n",
