Conflict 2: foo function

--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -7,9 +7,7 @@
    "outputs": [],
    "source": [
     "def foo():\n",
-    "    print('foo')\n",
-    "def bar():\n",
-    "    print('bar')"
+    "    print('foo')"
    ]
   }
  ],
