--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "def foo():\n",
-    "    print('foo')"
+    "    print('foo')\n",
+    "def bar():\n",
+    "    print('bar')"
    ]
   }
  ],
