Conflict 2: trying with more different functions like foobar and (foo+bar)

--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -6,14 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def foo():\n",
-    "    print('foo')\n",
-    "def bar():\n",
-    "    print('bar')\n",
     "def foobar():\n",
-    "    foo()\n",
-    "    bar()\n",
-    "\n",
+    "    return foo(), bar()\n",
     "foobar()"
    ]
   }
