--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -7,12 +7,7 @@
    "outputs": [],
    "source": [
     "def foo():\n",
-    "    print('foo')\n",
-    "def bar():\n",
-    "    print('bar')\n",
-    "def foobar():\n",
-    "    return foo(), bar()\n",
-    "foobar()"
+    "    return 'foo'"
    ]
   }
  ],
