--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "def bar():\n",
-    "    return 'bar'"
+    "    return 'bar'\n",
     "def foo():\n",
     "    return 'foo'"
    ]
