--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -6,10 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bar():\n",
-    "    return 'bar'\n",
     "def foo():\n",
-    "    return 'foo'"
+    "    return 'bar'"
    ]
   }
  ],
