--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -9,6 +9,16 @@
     "def foo():\n",
     "    return 'foo'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lorem():\n",
+    "    return 'lorem'"
+   ]
   }
  ],
  "metadata": {
