--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -9,6 +9,16 @@
     "def foo():\n",
     "    return 'bar'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ipsum():\n",
+    "    return 'ipsum'"
+   ]
   }
  ],
  "metadata": {
