--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -7,19 +7,15 @@
    "outputs": [],
    "source": [
     "def foo():\n",
-    "    return 'foo'",
-    "def bar():\n",
-    "    return 'bar'"
+    "    return 'foo'"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def lorem():\n",
-    "    return 'lorem'"
+    "Function 1"
    ]
   }
  ],
