--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -6,20 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def foo():\n",
-    "    return 'foo'",
     "def bar():\n",
     "    return 'bar'"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def lorem():\n",
-    "    return 'lorem'"
+    "Function 2"
    ]
   }
  ],
