--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -7,9 +7,7 @@
    "outputs": [],
    "source": [
     "def foo():\n",
-    "    return 'foo'",
-    "def bar():\n",
-    "    return 'bar'"
+    "    return 'foo'\n"
    ]
   },
   {
@@ -17,8 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function 1",
-    "Function 2"
+    "Function 1"
    ]
   }
  ],
