--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -7,8 +7,13 @@
    "outputs": [],
    "source": [
     "def bar():\n",
-    "    return 'bar'"
+    "    return 'bar'\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
