--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -9,7 +9,8 @@
     "def foo():\n",
     "    return 'foo'\n",
     "def bar():\n",
-    "    return 'bar'\n"
+    "    return 'bar'\n",
+    "print('lorem ipsum')"
    ]
   },
   {
