--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -2,28 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lorem ipsum\n"
+     ]
+    }
+   ],
    "source": [
     "def foo():\n",
     "    return 'foo'\n",
     "def bar():\n",
     "    return 'bar'\n",
     "print('lorem ipsum')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Function 1"
    ]
   }
  ],
