--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -18,8 +18,7 @@
     "    return 'foo'\n",
     "def bar():\n",
     "    return 'bar'\n",
-    "print('lorem ipsum')",
-    "    return 'bar'\n"
+    "print('lorem ipsum')\n"
    ]
   },
   {
