--- a/foobar.ipynb
+++ b/foobar.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<base target=\"_blank\">\n",
+    "\n",
+    "# Test\n",
+    "this is some markdown with a cross-file link to [README](README.md)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
